Actualiza la estructura del proyecto: modifica el archivo index.html para cambiar el título y el ícono, reorganiza las importaciones en App.tsx, añade animaciones en index.css, elimina componentes no utilizados (AuthScreen, GithubLogo, GoogleLogo) y ajusta las propiedades de los componentes Login y Register para mejorar la funcionalidad.

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@ body {
   font-family: 'Rampart One', system-ui;
   font-size: 1.4rem;
 }
+
+@view-transition {
+  navigation: auto;
+}
+
+::view-transition-group(*) {
+  animation-duration: 3s;
+}
