Refactoriza el componente Login para incluir validación de correo electrónico y mejora el estilo de los botones. Se añade el componente UserLogo y la función checkEmail para validar el formato del correo. Se eliminan animaciones no utilizadas en index.css.

--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,5 @@ body {
 #title {
   font-family: 'Rampart One', system-ui;
   font-size: 1.4rem;
-}
-
-@view-transition {
-  navigation: auto;
-}
-
-::view-transition-group(*) {
-  animation-duration: 3s;
+  text-align: center;
 }
