--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   padding-block: 1rem;
   padding-inline: 2rem;
-  height: 100vh;
+  min-height: 100vh;
   text-align: center;
   background-color: #000;
   color: #fff;
